--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,24 +20,30 @@
             <li class="nav-item"><a href="/dev" class="nav-link">Dev Mode</a></li>
             <li class="nav-item"><a href="/other" class="nav-link">Other</a></li>
             <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="/contribute" class="nav-link">Contribute</a></li>
         </ul>
     </header>
-    <div class="container">
+    <!-- make a div seperated into two -->
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-md-4" style="border-radius: 10px; border-style: solid; border-color: #c9c9c9;">
-                <span class="fs-4" style="text-align: center !important;">In This Page</span>
-                <ul id="inthispage"></ul>
+            <div class="col-md-3">
+                <h3>In This Page</h3>
+                <div class="list-group" id="inthispage"></div>
             </div>
-            <div class="col-md-8">
-                {{ content }}
+            <div class="col-md-9">
+                <div class="card">
+                    <div class="card-body">
+                        {{ content }}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
     <script>
         var container = document.getElementById("inthispage");
-        $("h1, h2, h3, h4, h5, h6").each(function(index, elem) {
-            container.innerHTML += `<li><a style='text-align: left;' href='#${elem.id}'>${elem.innerHTML}</a></li>`;
+        $("h1, h2").each(function(index, elem) {
+            container.innerHTML += `<a class='list-group-item list-group-item-action' href='#${elem.id}'>${elem.innerHTML}</a>`;
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
